--- a/index.html
+++ b/index.html
@@ -9,24 +9,34 @@
             <nav>
                 <ul>
                     <ul>
-                        <li><a href = "index.html">HOME</a></li>
-                        <li><a href = "menu.html">MENU</a></li>
-                        <li class="logo"><a href="index.html">ARTISAN BAKERY LOGO</a></li>
-                        <li><a href = "locations.html">LOCATIONS</a></li>
-                        <li><a href = "contacts.html">CONTACTS</a></li>
+                        <li><a href = "index.html" class = "nav">HOME</a></li>
+                        <li><a href = "menu.html" class = "nav">MENU</a></li>
+                        <li class="mobile"><a href = "locations.html" class = "nav">LOCATIONS</a></li>
+                        <li class="mobile"><a href = "contacts.html" class = "nav">CONTACTS</a></li>
+                        <li class="logo"><a href="index.html" class = "nav navlogo">ARTISAN BAKERY LOGO</a></li>
+                        <li class="desktop"><a href = "locations.html" class = "nav">LOCATIONS</a></li>
+                        <li class="desktop"><a href = "contacts.html" class = "nav">CONTACTS</a></li>
 
                 </ul>
             </nav>
             <h1>Home</h1>
         </header>
-        <section>
+        <section class="features">
             <figure>
                 <img src="images/croissants.png" alt="Croissants">
-                <figcaption>Croissants</figcaption>
+                <figcaption class="homecaptquart">Fresh Baked Bread</figcaption>
+            </figure>
+            <figure>
+                <img src="images/coffee.png" alt="Croissants">
+                <figcaption class="homecapthalf">Fresh Brewed Coffees</figcaption>
+            </figure>
+            <figure>
+                <img src="images/cookies.png" alt="Croissants">
+                <figcaption class="homecaptquart">Fresh Baked Cookies</figcaption>
             </figure>
             
         </section>
         <section>lower-section</section>
-        <footer>footer</footer>
+        <footer>123 Main Street Edwardsville, IL · 555-555-5555 · help@bakers.com</footer>
     </body>
 </html>
